# calc-compiler

./: .gitignore  CMakeLists.txt  README  README.md  annasamy_mani.md  calcc.cpp  divbyzero.calc  djh.md  driver.c  multiple_expr_error.calc  run_tests.pl
auto-tests/: driver.c  (+17 more)
auto-tests-hw7/: 09_factorial.calc  10_factorial.calc  12_factorial.calc  19_factorial.calc  Interval_Summation.calc  avg.calc  defvalue.calc  fact.calc  fib.calc  gcd.calc  isPower2.calc  isprime.calc  jdr07.calc  jdr08.calc  jdr09.calc  jdr17.calc  jdr20.calc  jdr23.calc  jdr24.calc  jdr25.calc  jdr30.calc  jdr31.calc  jdr32.calc  jdr34.calc  jdr38.calc  jdr39.calc  jdr40.calc  jdr41.calc  jdr45.calc  jkz01.calc  mmcc01.calc  mmcc02.calc  mmcc03.calc  paren3.calc  paren5.calc  power_args.calc  simple_fact.calc  wgh-euclid.calc
auto-tests-hw8/: 02_factorial.calc  03_factorial.calc  04_factorial.calc  06_factorial.calc  11_factorial.calc  13_factorial.calc  14_factorial.calc  15_factorial.calc  17_factorial.calc  18_factorial.calc  20_factorial.calc  aac_bad_flag.cc  aac_if_true_test.cc  aac_nested_while_mutation.cc  aac_nonmutable_assign.cc  aac_not_pointer_test.cc  aac_overflow.cc  aac_parse_error1.cc  aac_parse_error2.cc  aac_parse_error3.cc  aac_parse_error4.cc  aac_type_error1.cc  aac_type_error2.cc  aac_type_error3.cc  aac_type_error4.cc  aac_type_error5.cc  aac_while_false.cc  add-overflow-simple.calc  circle.calc  div_by_zero.calc  div_by_zero_args.calc  div_int_min_by_minus_one.calc  fib-overflow.calc  foo.ll  jdr03.calc  jdr04.calc  jdr15.calc  jdr16.calc  jdr22.calc  jdr26.calc  (+25 more)
(+519 files in other folders)
